# uhlc-rs

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: build.yml  release.yml
ci/nostd-check/: Cargo.toml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Sub.js  trait.SubAssign.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/: trait.FromStr.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.desc/uhlc/: uhlc-desc-0-.js
search.index/: 09ba4cd4be8e.js  16584bb0dce8.js  2d8dd0a4de0b.js  3b3927045335.js  418b45526167.js  438627d2c149.js  447bc7a90c37.js  563a89ae1b73.js  6e9a4472c98b.js  root.js
search.index/crateNames/: 8cb0ed394558.js
search.index/desc/: 14562d7eb55d.js
search.index/entry/: de8f7965b916.js
search.index/function/: a57bc361a403.js
search.index/generic_inverted_index/: 15e564e14423.js
search.index/name/: 5a184be0078a.js
search.index/normalizedName/: 32c538b751a5.js
search.index/path/: 98e82d2b404b.js
search.index/type/: dfddaac43c25.js
src/: id.rs  lib.rs  ntp64.rs  timestamp.rs
src/uhlc/: id.rs.html  lib.rs.html  ntp64.rs.html  timestamp.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Sub.js  trait.SubAssign.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
trait.impl/serde_core/ser/: trait.Serialize.js
uhlc/: all.html  constant.CSIZE.html  constant.DELTA_MS.html  enum.ParseIDError.html  enum.ParseNTP64Error.html  enum.ParseTimestampError.html  fn.system_time_clock.html  fn.zero_clock.html  index.html  sidebar-items.js  struct.ExceedingDeltaError.html  struct.HLC.html  struct.HLCBuilder.html  struct.ID.html  struct.NTP64.html  struct.ParseIDError.html  struct.ParseNTP64Error.html  struct.ParseTimestampError.html  struct.SizeError.html  struct.Timestamp.html
uhlc/id/: enum.ParseIDError.html  struct.ID.html  struct.ParseIDError.html  struct.SizeError.html
uhlc/ntp64/: enum.ParseNTP64Error.html  struct.NTP64.html  struct.ParseNTP64Error.html
uhlc/timestamp/: enum.ParseTimestampError.html  struct.ParseTimestampError.html  struct.Timestamp.html
