#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
[package]
name = "uhlc"
version = "0.5.0"
description = """
A Unique Hybrid Logical Clock for Rust.
"""
repository = "https://github.com/atolab/uhlc-rs"
homepage = "https://crates.io/crates/uhlc"
documentation = "https://atolab.github.io/uhlc-rs/"
readme = "README.md"
license = "EPL-2.0 OR Apache-2.0"
keywords = ["hlc", "clock", "timestamp"]
categories = ["date-and-time"]
authors = ["Julien Enoch <julien.enoch@adlinktech.com>"]
edition = "2018"

[dependencies]
uuid = { version = "1.1", features = ["v4"] }
hex = "0.4"
humantime = "2.0"
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
futures = "0.3"

[dev-dependencies.async-std]
version = "1.6"
