#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
[package]
name = "uhlc"
version = "0.5.1"
description = """
A Unique Hybrid Logical Clock for Rust.
"""
repository = "https://github.com/atolab/uhlc-rs"
homepage = "https://crates.io/crates/uhlc"
documentation = "https://atolab.github.io/uhlc-rs/"
readme = "README.md"
license = "EPL-2.0 OR Apache-2.0"
keywords = ["hlc", "clock", "timestamp"]
categories = ["date-and-time"]
authors = ["Julien Enoch <julien.enoch@adlinktech.com>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "hex/std",
    "humantime",
    "lazy_static",
    "log/std",
    "serde/std",
    "uuid/std"
]
defmt = ["dep:defmt"] # Enables defmt for logging in no_std
nightly = ["error_in_core"] # Enables experimental features -- requires nightly rust toolchain
error_in_core = [] # Allows to use core::error::Error

[dependencies]
defmt = { version = "0.3.2", features = ["alloc"], optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
humantime = { version = "2.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] } # No_std alternative for std::sync::Mutex
uuid = { version = "1.1", default-features = false, features = ["v4"] }
    # NOTE: Generation of UUIDv4 on embedded devices requires a custom implementation
    #       for getrandom::getrandom. Refer to the following page for more information:
    #       https://docs.rs/getrandom/latest/getrandom/#unsupported-targets

[dev-dependencies]
futures = "0.3"

[dev-dependencies.async-std]
version = "1.6"
