#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
[package]
name = "uhlc"
version = "0.6.1"
description = """
A Unique Hybrid Logical Clock for Rust.
"""
repository = "https://github.com/atolab/uhlc-rs"
homepage = "https://crates.io/crates/uhlc"
documentation = "https://atolab.github.io/uhlc-rs/"
readme = "README.md"
license = "EPL-2.0 OR Apache-2.0"
keywords = ["hlc", "clock", "timestamp"]
categories = ["date-and-time"]
authors = ["Julien Enoch <julien.enoch@adlinktech.com>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "humantime",
    "lazy_static",
    "log",
    "serde/std",
    "rand/std"
]
defmt = ["dep:defmt"] # Enables defmt for logging in no_std

[dependencies]
defmt = { version = "0.3.2", features = ["alloc"], optional = true } # Replaces log in no_std
humantime = { version = "2.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4", optional = true } # Used only in std
rand = { version = "0.8.5", default-features = false, features = ["alloc", "getrandom"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] } # No_std alternative for std::sync::Mutex

[dev-dependencies]
async-std = "1.6"
futures = "0.3"
